# Fluxora-Contracts

./: .gitignore  MULTIPLE_STREAMS_TESTS.md  PAUSE_RESUME_TESTS.md  PR_SUMMARY_MULTIPLE_STREAMS.md  QUICK_REFERENCE.md  README.md  TEST_COVERAGE_ANALYSIS.md  TEST_SUMMARY.md  test_output.txt  test_output_multiple_streams.txt
contracts/stream/: Cargo.toml
contracts/stream/src/: accrual.rs  lib.rs  test.rs
contracts/stream/test_snapshots/test/: test_admin_can_resume_stream.1.json  test_calculate_accrued_after_cliff.1.json  test_calculate_accrued_at_start.1.json  test_calculate_accrued_before_cliff_returns_zero.1.json  test_calculate_accrued_capped_at_deposit.1.json  test_calculate_accrued_exactly_at_cliff.1.json  test_calculate_accrued_max_values.1.json  test_calculate_accrued_mid_stream.1.json  test_calculate_accrued_overflow_protection.1.json  test_cancel_already_cancelled_panics.1.json  test_cancel_completed_stream_panics.1.json  test_cancel_fully_accrued_no_refund.1.json  test_cancel_paused_stream.1.json  test_cancel_stream_as_admin.1.json  test_cancel_stream_full_refund.1.json  test_cancel_stream_partial_refund.1.json  test_create_stream_edge_cliffs.1.json  test_create_stream_initial_state.1.json  test_get_config.1.json  test_get_stream_state_all_statuses.1.json  test_get_stream_state_non_existent.1.json  test_init_twice_panics.1.json  test_multiple_streams_independent.1.json  test_pause_already_paused_panics.1.json  test_pause_and_resume.1.json  test_resume_active_stream_panics.1.json  test_withdraw_completed.1.json  (+13 more)
contracts/stream/tests/: integration_suite.rs
(+9 files in other folders)
